# thalamus

./: .devcontainer.json  .dockerignore  .env.example  .env.test  .envrc  .gitignore  .tarpaulin.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TESTING.md  casbin_model.conf  config.example.k  config.k  config.k.example  devenv.nix  devenv.yaml  docker-compose.dev.yml  docker-compose.yml  hk.pkl  intro.typ  justfile.old  kcl.mod  mise.toml  plan.md
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/workflows/: ci.yml  container.yml
.old/: README.md
.sqlx/: query-01659785ad0f8a0b94e6a4c3be0f963a67056ce4f79ef302bb09d6ea459103a4.json  query-08d2708468f530a81c325b3dc1ff79e9d6993f2bd1760b80664cd3029a0ac034.json  query-0c0a092c7415b5f45c102c60d741cf93a2a99a43a7a1c21132bb2f263e329e8d.json  query-0ef4f586931a82cee0fbf0fe72210b0bb752f1ab0aa85ffa112b27ce271bec3d.json  query-1288e176ae8bf12c44f9fa01a86ad6cb72329518644970059d81ae506ba79d71.json  query-13025446cd97a87caee46afdd64b9d5398e71e69f269f4635ad80cb06006f155.json  query-1684f6dc59e5abe9740bb9acf1ab1ec535554ec6aa17354ec72cab8b25e8ca0f.json  query-183638c93cc5e07a7702dc441c152abb8abc01d94d3c04fd67190c43ffc7223f.json  query-19119fe7dc5db7663ce2ecd51cba164c8c9d7a75d64f92c61fb245796bf7a664.json  query-1d47cda9eb643956745541fcfa0784b54f14ba9782dcfcf50c29f65a112dff11.json  query-1fff1b1b68aa96426c04a2b08ca6b88d1a221d68ff99d2048b604607fc1f876a.json  query-2016fbc0c421eb49767e286b2c28167cf672c5415beef1b46ab7d4ada810973e.json  query-2be5059ee4d9445a827ba5330efec5d40816ffbbc17155f29ebe34655c51340b.json  query-2e4e9f3e86f5b385a3a3dc976e9681da0cfa6587f9269803224a4b645b99571f.json  query-318fc65cdd170298ada295de605835a182b78f760d778875bb76a26b35220e29.json  query-38969fa7dfc1e6280c49586e64c7a154d596feadf856e935eada80cb7e517a83.json  query-3a366b5de61d1c44e45d9d6c4b8179576267c3b23ed59dc3717d6ddec4dd30df.json  query-3b2c3a1826b05b982a6a747613427df97cbe83a49cfd9c46fe37f98ed27fe862.json  query-3c559d77c73410d7c916c82e8d667d3222d2b2e251f0c986f6993f8013145114.json  query-3ed2544ccf52b9e5f6d15deba72ce8009c98063d00e7ea13754bea2df70a9398.json  query-4267311afe401f2d135779e85cd20781e5ff93a9d87371071e80452185793974.json  query-46bab8177632ef770c6c438dd411dcb2ed097eae3ca57f46873568a19a403773.json  query-48ca5923b4a3cb111bce94bb51f6fa394892918ff46858b4f4fa24b06efeb50c.json  query-4a55cd7150b91a068c983514850fe45b27ae16f17ba482943ea534ef09ae796b.json  query-4cf73723cbd61ad99a423f8f8d433ec525a8cd3913334ff55bc7a77a7dddc966.json  query-55a863c4dda5cb52e2764b8779b7a671b93f27f74567511515fb39ab0cd6c31d.json  query-5638c155bdf070a2591ce71beea9124d6f9e84f8d85d4789333728304b2a56e4.json  query-5d027d070e22303cb1803cf19183125c439f3198245748eda330b357e602670f.json  query-5f3663b3bcb2c3a75a6bd85781cde02130b4f211a547f9caf2850c0c500016bd.json  query-5fa9d2e9291095bc0936330643677d55055b96393351e9ff8a31e57afd5aa411.json  query-6166fbcf6394b9f4815a013af1784f02825a173956f13ee01c53292ed4a87a59.json  query-61ea06a2bde893eeac2ba8c6dc90a0a2affb68a34e8ba40e58d7ad35737db765.json  query-628b9e538f0f3e1346fc9b84545d7df5411d92b1afb94da999e398795b835b62.json  query-63fc527c575b425884c156d0f86c714ae3d75e8a1f8e371bc9cd37e76636a756.json  query-6ac1ac9c06f27ee9a71458143946b9d80d645bca63aabca6e38cc32fb900b520.json  query-6d9ea22c5fcebb111c66bf1f9208824b1725bde348b66b9b3c37a1b913e41be8.json  query-78f52823b1b826391d239834165bea235244d5c678b911cf6af0cd8b49682139.json  query-79275f9e157504b7c53b5e64ca19c69704267c92620102bcd9139eb8db7e69a8.json  query-81cc7fca809d2ec15ef50595f7f2b3b4dab9b1b0ed3dd25406115143df542629.json  query-82fb28069dc1922c0247a0794feb45481b718c053a89c923928bb4bb3ad98495.json  (+37 more)
crates/thalamus-plugin/: Cargo.toml
crates/thalamus-plugin/src/: adapter.rs  guardrail.rs  lib.rs  observability.rs  routing.rs  types.rs
docs/: documentation.typ
examples/plugins/adapter-echo/: Cargo.toml
examples/plugins/guardrail-blocklist/: Cargo.toml
examples/plugins/routing-echo/: Cargo.toml
migrations/: .gitkeep  20250122000001_initial_schema.down.sql  20250122000001_initial_schema.up.sql  20250216000001_token_revocation.down.sql  20250216000001_token_revocation.up.sql  20250217000001_oauth.down.sql  20250217000001_oauth.up.sql  20250601000001_teams_and_permissions.down.sql  20250601000001_teams_and_permissions.up.sql  20250614000001_queue_priority_defaults.down.sql  20250614000001_queue_priority_defaults.up.sql  20250614000002_batch_jobs.down.sql  20250614000002_batch_jobs.up.sql
pkg/: kcl.mod  schemas.k
scripts/: setup-test-db.sh
src/: bootstrap.rs  error.rs  lib.rs  main.rs
src/features/: mod.rs
src/features/auth/: api.rs  api_oauth.rs  api_setup.rs  mod.rs
src/features/authorization/: api.rs  domain.rs  infra.rs  mod.rs
src/features/backends/: domain.rs  health.rs  infra.rs  mod.rs
src/features/batch/: api.rs  domain.rs  infra.rs  mod.rs
src/features/health/: api.rs  mod.rs
src/features/llm_proxy/: domain.rs  mod.rs
src/features/plugin/: adapter_bridge.rs  api.rs  domain.rs  guardrail_bridge.rs  infra.rs  mod.rs  routing_bridge.rs
src/features/routing/: domain.rs  infra.rs  mod.rs  priority.rs  queue.rs  strategies.rs
src/features/teams/: api.rs  domain.rs  dto.rs  infra.rs  mod.rs
src/features/users/: api.rs  mod.rs
src/middleware/: admin_auth.rs  api_key_auth.rs  auth.rs  authz.rs  breach_detection.rs  mod.rs  rate_limit.rs  security_headers.rs
src/shared/: mod.rs  utils.rs
src/shared/config/: loader.rs  mod.rs  types.rs  watcher.rs
src/shared/database/: mod.rs  pool.rs
src/shared/models/: mod.rs  (+7 more)
tests/: api_keys_test.rs  auth_integration_test.rs  database_test.rs  health_test.rs  llm_proxy_advanced_e2e_test.rs  llm_proxy_e2e_test.rs  opaque_integration_test.rs  test_data.rs
tests/common/: config_builder.rs  fixtures.rs  mod.rs  transactional.rs  wiremock_backends.rs
tests/oidc-data/: oidc-config.json  oidc-users.json
ui/: Dockerfile  README.md  app.json  babel.config.js  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
ui/scripts/: reset-project.js
ui/src/: global.css
(+99 files in other folders)
